--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ dist/
 dist-ssr/
 *.local
 
+backend/__pycache__/
+backend/database/__pycache__/
+backend/services/__pycache__/
+backend/utils/__pycache__/
+
+
 # Ignore venv
 venv/
 
