--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ backend/__pycache__/
 backend/database/__pycache__/
 backend/services/__pycache__/
 backend/utils/__pycache__/
-
+backend/routes/__pycache__/
 
 # Ignore venv
 venv/
