--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.13.0",
     "@emotion/react": "^11.14.0",
+    "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
