--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ dist-ssr/
 *.local
 
 backend/__pycache__/
+backend/routes/__pycache__
+backend/middleware/__pycache__
 backend/database/__pycache__/
 backend/services/__pycache__/
 backend/utils/__pycache__/
