--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^3.13.0",
     "@emotion/react": "^11.14.0",
     "axios": "^1.8.4",
+    "framer-motion": "^12.6.3",
     "jwt-decode": "^4.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
