--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.4.0",
     "socket.io-client": "^4.8.1"
